# zephNVS

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
CMakeModules/: avr_options.cmake  bl  generic-gcc-msp430.cmake  msp430_options.cmake  stm8_options.cmake
containers/cmake-avr/: Dockerfile
containers/cmake-msp430/: Dockerfile
containers/ubuntu-gcc/: Dockerfile
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  generate_ghpages.sh
doc/doxygen-bootstrapped/: customdoxygen.css  footer.html  header.html
doc/pages/: quickstart.dox  systemdescription.dox
example/arduino_nano/: CMakeLists.txt  README.md  main.c
example/arduino_nano/bsp/: led.c  led.h  ramflash.c  ramflash.h
inc/: device.h
inc/drivers/: flash.h
inc/nvs/: nvs.h
inc/sys/: log.h  mutex.h
inc/zephyr/: types.h
src/core/: CMakeLists.txt  nvs.c  nvs_priv.h
test/: CMakeLists.txt  crc8_mock.cpp  flash_mock.cpp  test_nvs.cpp  test_nvs_emulated.cpp
test/emulator/: flash.c  flash_emulator.h
test/mocks/: device_mock.cpp  device_mock.hpp  flash_mock.cpp  flash_mock.hpp  mutex_mock.cpp  mutex_mock.hpp
